2009-05-04  Martin Leidig  <mleidig@schlund.de>

	Fixed JMX bean naming in war-mode (use project name from project.xml
	instead of name derived from URI to project.xml to register JMX
	beans).

2009-04-20  Martin Leidig  <mleidig@schlund.de>

	Fixed problem in TargetGenerator occurring when modtime-check is
	disabled, but targets aren't pre-built (URI problem when trying to
	load module resources from file system).

2009-04-20  Martin Leidig  <mleidig@schlund.de>

	Fixed submit action bug (ignore unknown actions for next page selected
	by pageflow mechanism).

2009-04-07  Martin Leidig  <mleidig@schlund.de>

	Fixed method covariance problem: now we just skip all
	synthetic/bridge methods when introspecting a bean.

	Modified:
	* src/de/schlund/pfixcore/beans/BeanDescriptor.java
	* tests/junit/de/schlund/pfixcore/beans/BeanDescriptorTest.java

	Added:
	* tests/junit/de/schlund/pfixcore/oxm/CovariantBeanTest.java
	* tests/junit/de/schlund/pfixcore/oxm/bean/CovariantBeanA.java
	* tests/junit/de/schlund/pfixcore/oxm/bean/CovariantBeanB.java

2009-04-02  Martin Leidig  <mleidig@schlund.de>

	Fixed pfx:externalform bug (missing timestamp param).
	* projects/core/xsl/forminput.xsl
	* src/org/pustefixframework/http/dereferer/DerefRequestHandler.java

2009-03-31  Andreas Kurth

	* skel/build-skel.xml: extractModules#chmod can cope with very long
	argument lists now.

2009-03-16  Martin Leidig  <mleidig@schlund.de>

	* projects/core/xsl/include.xsl: Added support for deferring includes
	until runtime by setting the 'pfx:include' element's 'level' attribute 
	to 'runtime'. The 'part' and 'href' values can be lately bound using
	the 'pfx:part' and 'pfx:href' elements, which are evaluated at
	runtime.

2009-03-11  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/workflow/context/SessionContextImpl.java:
	catch all exceptions thrown in SessionStatusListeners to ensure that
	SessionAdmin.valueUnbound is called to remove session
